neverpile-eureka-test-container/k8s-deployment/110-elasticsearch-stateful-set.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: elasticsearch
  namespace: neverpile-eureka
  labels:
    com.levigo.service: neverpile
    com.levigo.component: elasticsearch
spec:
  serviceName: elasticsearch
  replicas: 1
  podManagementPolicy: OrderedReady #Parallel
  updateStrategy:
    type: OnDelete
  selector:
    matchLabels:
      com.levigo.service: neverpile
      com.levigo.component: elasticsearch
  template:
    metadata:
      labels:
        com.levigo.service: neverpile
        com.levigo.component: elasticsearch
    spec:
#      serviceAccountName: neverpile-es
      securityContext:
        runAsUser: 1000
        fsGroup: 1000
      restartPolicy: Always
      containers:
      - name: elasticsearch
        image:  docker.elastic.co/elasticsearch/elasticsearch:7.4.2
        securityContext:
          privileged: false
          runAsNonRoot: true
        ports:
        - name: http
          containerPort: 9200
          protocol: TCP
        - name: transport
          containerPort: 9300
          protocol: TCP
        resources:
          requests:
            memory: "2048Mi"
            cpu: "2000m"
            ephemeral-storage: "2Gi"
          limits:
            memory: "2048Mi"
            cpu: "2000m"
            ephemeral-storage: "2Gi"
        readinessProbe:
          httpGet:
            path: /_cluster/health
            scheme: HTTP
            port: http
          initialDelaySeconds: 5
          periodSeconds: 10   #10=default
          timeoutSeconds: 2   # 1=default
          successThreshold: 1 # 1=default
          failureThreshold: 3 # 3=default
        livenessProbe:
          httpGet:
            path: /_cluster/health
            scheme: HTTP
            port: http
          initialDelaySeconds: 60
          periodSeconds: 10   #10=default
          timeoutSeconds: 2   # 1=default
          successThreshold: 1 # 1=default
          failureThreshold: 3 # 3=default
        volumeMounts:
        - name: neverpile-es-config
          mountPath: /usr/share/elasticsearch/config/elasticsearch.yml
          subPath: elasticsearch.yml
        - name: neverpile-es-data
          mountPath: /usr/share/elasticsearch/data
        - name: neverpile-es-logs
          mountPath: /usr/share/elasticsearch/logs
      volumes:
      - name: neverpile-es-config
        configMap:
          name: neverpile-es-config
      # persistent volume
      #      - name: neverpile-es-data
      #        persistentVolumeClaim:
      #          claimName: neverpile-es-data-local
      # HOST-PATH
      - name: neverpile-es-data
        hostPath:
          path: /mnt/elasticsearch/data
          type: DirectoryOrCreate
      - name: neverpile-es-logs
        hostPath:
          path: /mnt/elasticsearch/logs
          type: DirectoryOrCreate
...
