neverpile-eureka-test-container/k8s-deployment/550-neverpile-ingress.yaml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: neverpile
  namespace: neverpile-eureka
spec:
  tls:
  - hosts:
    - neverpile.sol-01.k8s.levigo.net
    - neverpile-0.sol-01.k8s.levigo.net
    - neverpile-1.sol-01.k8s.levigo.net
    - neverpile-2.sol-01.k8s.levigo.net
    - neverpile-3.sol-01.k8s.levigo.net
    secretName: k8s-levigo-net-tls
  rules:
  - host: neverpile.sol-01.k8s.levigo.net
    http:
      paths:
      - path: /
        backend:
          serviceName: neverpile
          servicePort: web
  - host: neverpile-0.sol-01.k8s.levigo.net
    http:
      paths:
        - path: /
          backend:
            serviceName: neverpile-0
            servicePort: web
  - host: neverpile-1.sol-01.k8s.levigo.net
    http:
      paths:
        - path: /
          backend:
            serviceName: neverpile-1
            servicePort: web
  - host: neverpile-2.sol-01.k8s.levigo.net
    http:
      paths:
        - path: /
          backend:
            serviceName: neverpile-2
            servicePort: web
  - host: neverpile-3.sol-01.k8s.levigo.net
    http:
      paths:
        - path: /
          backend:
            serviceName: neverpile-3
            servicePort: web
...
